[gd_scene load_steps=6 format=3 uid="uid://cvgjcwqn6k8eu"]

[ext_resource type="Script" uid="uid://c5iem585xfpb3" path="res://Scripts/Player/General/health.gd" id="1_cvdme"]
[ext_resource type="AudioStream" uid="uid://p10un5uu3bbn" path="res://Assets/Audio/SFX/Player/PlayerDeath.wav" id="2_w8hlu"]
[ext_resource type="AudioStream" uid="uid://1tbvqq61yrsa" path="res://Assets/Audio/SFX/Player/bone_break_sfx.mp3" id="3_w8hlu"]
[ext_resource type="AudioStream" uid="uid://b51t5c8anwlwa" path="res://Assets/Audio/SFX/Player/ES_Spell, Heal Sound - Epidemic Sound - 0000-10930.wav" id="4_iuemq"]
[ext_resource type="Script" uid="uid://b1ioedm45j70c" path="res://Scripts/Sounds/healing_sfx.gd" id="5_nv84f"]

[node name="Health" type="Node"]
script = ExtResource("1_cvdme")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
ignore_time_scale = true

[node name="PlayerDeathSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_w8hlu")
bus = &"Sfx"

[node name="BoneBreakSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_w8hlu")
bus = &"Sfx"

[node name="HealingSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_iuemq")
volume_db = -10.0
bus = &"Sfx"
script = ExtResource("5_nv84f")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
